--- a/projeto download/Chef Express/login.html
+++ b/projeto download/Chef Express/login.html
@@ -7,15 +7,21 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <main class="container main-content">
-    <main class="container main-content">
+
+<main class="container main-content">
+
   <h1 id="loginTitulo">Login do Cliente</h1>
 
   <form id="loginForm" class="login-form">
+
     <input type="text" id="nome" placeholder="Nome" required />
+
     <input type="email" id="email" placeholder="E-mail" required />
-    <input type="password" id="senha" placeholder="Senha" required style="display:none" />
+
+    <input type="password" id="senha" placeholder="Senha" required />
+
     <button type="submit" class="btn-primary">Entrar</button>
+
   </form>
 
   <p class="muted" style="text-align:center;margin-top:12px;">
@@ -23,14 +29,11 @@
   </p>
 
   <div id="toast" class="toast" aria-hidden="true"></div>
+
 </main>
 
 <script src="js/utils.js"></script>
 <script src="js/login.js"></script>
 
-  </main>
-
-  <script src="js/utils.js"></script>
-  <script src="js/login.js"></script>
 </body>
 </html>
