--- a/projeto download/Chef Express/login.html
+++ b/projeto download/Chef Express/login.html
@@ -21,7 +21,7 @@
       <input type="password" id="senha" placeholder="Senha" required />
 
       <!-- CPF (aparece apenas no cadastro) -->
-      <input type="text" id="cpf" placeholder="CPF" style="display:none" />
+      <input type="text" id="cpf" placeholder="CPF (xxx.xxx.xxx-xx)" maxlength="14" style="display:none" />
 
       <!-- Endereço 1 (aparece apenas no cadastro) -->
       <input type="text" id="endereco1" placeholder="Endereço principal" style="display:none" />
